--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Az ősz fő ünnepei az elmúláshoz kapcsolódnak: november 1. előestéje az a
 <img src="image/gimszarvas.jpg" alt="" class="img rounded float-end">
 <p class="p">
 
-<br>Szarvas: A szarvas a párosujjú patások közé tartozó emlősállat. A szarvasok legtöbb faja az őzekkel együtt a szarvasfélék családjába tartozik. Egyes nyelveken egyazon szó jelöli a szarvast és az őzet is. (Például az angol deer szó a jelzőjétől függően – red deer, roe deer – jelenthet szarvast vagy őzet.)
+<br>Szarvas: A szarvas a párosujjú patások közé tartozó emlősállat. A szarvasok legtöbb faja az őzekkel együtt a szarvasfélék családjába tartozik. Egyes nyelveken egyazon szó jelöli a szarvast és az őzet is.
 </p>
   
 
